change button:hover for reset part button

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -284,6 +284,10 @@ body {
                     border: none;
                     margin-right: 2rem;
                 }
+
+                button:hover {
+                    background-color: $secondary-color;
+                }
             }
         }
 
