--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -258,13 +258,29 @@ body {
 }
 
 .sub-title {
+    display: flex;
     background-color: $primary-color;
     color: $white;
     border-radius: 3px;
-    font-size: 1rem;
-    margin: 3rem auto 3rem 7rem;
+    margin: 3rem auto 3rem 6rem;
     padding: 7px;
     box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
+    align-items: baseline;
+
+    h2 {
+        font-size: 1rem;
+    }
+
+    button {
+        border: none;
+        margin: 0 .5rem;
+        color: inherit;
+        background-color: inherit;
+    }
+
+    button:hover {
+        background-color: inherit;
+    }
 }
 
 .container-parts {
