--- a/templates/vehicle/parts.html.twig
+++ b/templates/vehicle/parts.html.twig
@@ -26,7 +26,7 @@
         <form class="sub-title" method="post" action="" onsubmit="return confirm('Scyncronisation de {{ vehicle.name }} . . .');">
             <h2>Temps d'utilisation total : {{ vehicle.usedHour }}H</h2>
             <input type="hidden" name="_token" value="{{ csrf_token('sync' ~ vehicle.id) }}">
-            <button type="submit" class="button-reset"><i class="fas fa-sync-alt"></i></button>
+            <button type="submit"><i class="fas fa-sync-alt"></i></button>
         </form>
 
 
@@ -38,7 +38,7 @@
                         <label for="name">{{ part.name }}</label>
                         <input type="hidden" name="_token" value="{{ csrf_token('reset' ~ part.id) }}">
                         <div class="flex">
-                            <button type="submit" class="button-reset"><i class="fas fa-redo-alt"></i></button>
+                            <button type="submit"><i class="fas fa-redo-alt"></i></button>
                             <a href="{{ path('vehicle_parts_edit', {vehicle: vehicle.id, part: part.id}) }}"><i class="fas fa-cog"></i></a>
                         </div>
                     </form>
