--- a/templates/vehicle/parts.html.twig
+++ b/templates/vehicle/parts.html.twig
@@ -16,19 +16,11 @@
             </div>
         </div>
 
-
-        <div class="sub-title">
-            <h2>Temps d'utilisation total : {{ vehicle.usedHour }}H</h2>
-            <button type="submit" id="sync"><i class="fas fa-sync-alt"></i></button>
-        </div>
-
-
-        <form class="sub-title" method="post" action="" onsubmit="return confirm('Scyncronisation de {{ vehicle.name }} . . .');">
+        <form class="sub-title" method="post" action="{{ path('vehicle_sync', {vehicle: vehicle.id}) }}" onsubmit="return confirm('Syncronisation de {{ vehicle.name }} . . .');">
             <h2>Temps d'utilisation total : {{ vehicle.usedHour }}H</h2>
             <input type="hidden" name="_token" value="{{ csrf_token('sync' ~ vehicle.id) }}">
             <button type="submit"><i class="fas fa-sync-alt"></i></button>
         </form>
-
 
 
         <div class="container-parts">
